--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/x-data-grid": "^6.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spring": "^9.7.3",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
